# TreeMenuBackend

./: .env.example  .gitignore  Dockerfile  README.md  READMERU.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
apps/tree_menu/: admin.py  apps.py  urls.py  utils.py  views.py
apps/tree_menu/migrations/: 0001_initial.py  0002_create_demo_menus.py  0003_menu_render_as_dropdown.py  0004_menu_dropdown_title.py
apps/tree_menu/models/: __init__.py  menu.py  menu_item.py
apps/tree_menu/templates/tree_menu/: menu.html  menu_node.html
apps/tree_menu/templatetags/: tree_menu_tags.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: user.py
apps/users/models/managers/: __init__.py  custom_user_manager.py
core/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/demo/: about.html  catalog.html  contact.html  home.html  integrations.html  page.html  pricing.html
